--- a/articulo.html
+++ b/articulo.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/estilos.css" />
-    <title>Bienvenido</title>
+    <title>Bienvenido a hyperblog 2.0</title>
   </head>
 
   <body>
     <div id="container">
       <div id="cabecera">
-        hyperblog 
-        <span id= "tagline">tu blog de confianza</span>
+        hyperblog
+        <span id="tagline">tu blog de confianza</span>
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -21,13 +21,10 @@
           relacionado con la el post gracias por leerlo se le agradece
         </p>
         <p>
-          Este blog se trata sobre el control de versiones de la
-          git gracios por que el formateador de texto no sirve 
-          para nada :(
+          Este blog se trata sobre el control de versiones de la git gracios por
+          que el formateador de texto no sirve para nada :(
         </p>
-        <p>
-          Sucribete y dale like
-        </p>
+        <p>Sucribete y dale like</p>
       </div>
     </div>
   </body>
