--- a/articulo.html
+++ b/articulo.html
@@ -11,6 +11,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
+        <img id="logo" src="images/logo.png"/>
         hyperblog
         <span id="tagline">tu blog de confianza</span>
       </div>
