Agrege el footer

--- a/articulo.html
+++ b/articulo.html
@@ -11,7 +11,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        hyperblog
+        <b><h2>hyperblog</h2></b>
         <span id="tagline">tu blog de confianza</span>
       </div>
       <div id="post">
@@ -24,7 +24,8 @@
           Este blog se trata sobre el control de versiones de la git gracios por
           que el formateador de texto no sirve para nada :(
         </p>
-        <p>Sucribete y dale like</p>
+        <p>Sucribete y dale like martínez</p>
+        <p>este el footer del la pagina</p>
       </div>
     </div>
   </body>
