cambios en la ortografia

--- a/articulo.html
+++ b/articulo.html
@@ -16,10 +16,10 @@
         <span id="tagline">tu blog de confianza</span>
       </div>
       <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <h1>Este es el título atractivo e interesante del post</h1>
         <p>
           Este es el espacio del parrafo es donde se va explicar todo lo
-          relacionado con la el post gracias por leerlo se le agradece
+          relacionado con el post gracias por leerlo se le agradece
         </p>
         <p>
           Este blog se trata sobre el control de versiones de la git gracios por
